--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "hbs": "~4.0.1",
+    "knex": "^0.12.6",
     "morgan": "~1.7.0",
+    "pg": "^6.1.0",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "sqlite3": "^3.1.8"
   }
 }
