--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "morgan": "~1.7.0",
     "nodemon": "^1.11.0",
     "pg": "^6.1.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "unirest": "^0.5.1"
   },
   "devDependencies": {
     "sqlite3": "^3.1.8"
