--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "~1.15.2",
+    "cheerio": "^0.22.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
@@ -16,6 +17,7 @@
     "nodemon": "^1.11.0",
     "pg": "^6.1.0",
     "serve-favicon": "~2.3.0",
+    "superagent": "^3.0.0",
     "unirest": "^0.5.1"
   },
   "devDependencies": {
